tests/knowledge/context/aws/scenarios/cross_version/cloudformation_special_scenarios/get_att_func/cfn-account-data/cloudrail-developer/us-east-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-00c69f188fd46709f",
                    "RouteTableId": "rtb-0f1a2ea373998f45e"
                }
            ],
            "OwnerId": "698055230729",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0f1a2ea373998f45e",
            "Routes": [
                {
                    "DestinationCidrBlock": "48.90.91.74/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-000a7e8b1ce43cb61"
        }
    ]
}
